# nwn-tools

./: .gitignore  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  README.md
_NmcLib/: Nmc.h  NmcContext.cpp  NmcContext.h  NmcGeometry.cpp  NmcMesh.cpp
_NscLib/: CMakeLists.txt  Nsc.h  NscCompiler.cpp  NscContext.cpp  NscContext.h
_NwnLib/: NwnDefines.cpp  NwnDefines.h  NwnKeyFile.cpp  NwnKeyFile.h  NwnModuleFile.cpp  NwnModuleFile.h  NwnStdLoader.cpp  NwnStdLoader.h
_docopt/: CMakeLists.txt  libdocopt.dylib
nwnmdl/: .gitignore  CMakeLists.txt  nwnmdl  nwnmdl.cpp
nwnmdlcomp/: nwnmdlcomp.cpp
nwnnss/: .gitignore  CMakeLists.txt  nwnnss  nwnnss.cpp
nwnnsscomp/: nwnnsscomp.cpp
